<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WLTwitter</string>
    <string name="about">About</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- MENU -->
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="refresh_action">Récupération des tweets</string>

    <!-- LOGIN -->
    <string name="loginHint">Your Twitter login</string>
    <string name="passwordHint">Your Twitter password</string>
    <string name="login">Sign in</string>
    <string name="error_no_login">Empty login !</string>
    <string name="error_no_password">Empty password !</string>
    <string name="error_no_login_and_password">Empty login and password !</string>
    <string name="action_settings">Title!</string>
    <string name="title_activity_login">WLTwitter - Login</string>
    <string name="login_information">Login information</string>
    <string name="remember_me">Remember me</string>


    <!-- TWEET -->
    <string name="content">Content</string>
    <string name="alias">\(@alias)</string>
    <string name="username">Username</string>
    <string name="parcelable">Tweet Parcelable</string>
    <string name="star">Star</string>
    <string name="reply">Reply</string>
    <string name="short_retweet">RT</string>
    <string name="retweet">Retweet</string>

    <!-- SERVICE -->
    <string name="service_name">TweetService</string>

    <!-- Notification -->
    <string name="new_tweet_notification">Vous avez %s nouveau tweet</string>
    <string name="new_tweets_notification">Vous avez %s nouveaux tweets</string>
</resources>
