<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="blocksDescendants"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dip">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/user_picture"
                android:scaleType="fitXY">
            </ImageView>


            <Button
                android:id="@+id/retweet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/retweet"
                >
            </Button>
        </LinearLayout>



        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tweets">

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:id="@+id/user"
                android:layout_marginLeft="2dip"
                android:textStyle="bold"
                android:textColor="@color/blue_twitter">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alias"
                android:id="@+id/screenName"
                android:layout_toRightOf="@+id/user"
                android:layout_marginLeft="5dip"
                android:textColor="@color/gray_screenName">
            </TextView>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:layout_width="wrap_content"
                android:id="@+id/content_tweet"
                android:layout_below="@+id/user"
                android:layout_marginLeft="2dip"
                android:textStyle="normal"
                android:autoLink="web"
                android:textColor="#000000"
                android:linksClickable="true">
            </TextView>



        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
