<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="worldline.ssm.rd.ux.wltwitter.WLTwitterLoginActivity"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/twitter"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/blue_round_corners_background"
        android:padding="10dp"
        android:layout_marginBottom="240dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginEditText"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/passwordEditText"
            android:layout_alignStart="@+id/passwordEditText"
            android:layout_alignRight="@+id/passwordEditText"
            android:layout_alignEnd="@+id/passwordEditText"
            android:inputType="text"
            android:hint="@string/loginHint"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/loginEditText"
            android:hint="@string/passwordHint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/loginButton"
            android:layout_alignEnd="@+id/loginButton"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/white_blue_round_corners_selector" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:id="@+id/remember_me"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/passwordEditText"
            android:layout_alignStart="@+id/passwordEditText" />

    </RelativeLayout>

</RelativeLayout>
