<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tweet_fragment"
    android:background="#80000000"
    android:clickable="true"
    android:onClick="onClickPrevious"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:paddingBottom="20dp"
        android:background="@drawable/white_round_corners_background"
        android:clickable="true"
        android:layout_marginTop="89dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tweet_user_picture"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tweet_user"
                    android:text="@string/username"
                    android:textColor="@color/blue_twitter"
                    android:layout_marginTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tweet_alias"
                    android:layout_marginLeft="5dp"
                    android:text="@string/alias"
                    android:textColor="@color/gray_screenName"
                    android:layout_marginTop="5dp" />

            </LinearLayout>



        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tweet_content"
            android:text="@string/content"
            android:paddingBottom="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textColor="#000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/reply_button"
                android:id="@+id/tweet_reply"
                android:layout_gravity="center_horizontal"
                android:background="#fff"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/retweet_button"
                android:id="@+id/tweet_retweet"
                android:layout_weight="0.5"
                android:text="@string/retweet"
                android:background="#fff"
                android:layout_marginRight="2dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/tweet_star"
                android:text="@string/star"
                android:src="@drawable/star_button"
                android:layout_gravity="right"
                android:background="#fff"
                android:layout_marginRight="2dp" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>